--- a/components/header/styles.module.scss
+++ b/components/header/styles.module.scss
@@ -32,7 +32,7 @@
     display: flex;
     gap: 15px;
 
-    li {
+    .li {
       cursor: pointer;
       position: relative;
       display: flex;
@@ -96,7 +96,70 @@
           fill: #666;
         }
       }
+
+      @media(max-width: 670px) {
+
+        &:nth-of-type(2),
+        &:nth-of-type(3),
+        &:nth-of-type(4) {
+          display: none;
+        }
+      }
     }
   }
 
+}
+
+.menu {
+  width: 280px;
+  box-shadow: $shadow-1;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background: #fff;
+  z-index: 99;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem 0;
+
+  h4 {
+    text-align: center;
+  }
+
+  .flex {
+    display: flex !important;
+    gap: 10px !important;
+    width: 100%;
+    padding: 0 1rem;
+  }
+
+  ul {
+    li {
+      height: 30px;
+
+      a {
+        width: 100px;
+        padding-left: 1rem;
+      }
+      &:hover {
+        background: #eeeeeebe;
+      }
+    }
+  }
+  &__img {
+    width: 100px !important;
+    height: 100px !important;
+  }
+  .col {
+    display: flex;
+    flex-direction: column;
+    span {
+      &:last-of-type {
+        font-size: 14px;
+        color: $blue-color;
+        text-decoration: underline;
+      }
+    }
+  }
 }
