--- a/components/footer/styles.module.scss
+++ b/components/footer/styles.module.scss
@@ -11,10 +11,14 @@
   }
 
   img {
-
     width: 140px;
     height: 40px;
-    // object-fit: contain;
+  }
+
+  h3 {
+    font-style: 12px;
+    font-weight: 700;
+    color: #222;
   }
 
   &__links {
@@ -25,20 +29,76 @@
 
     ul {
       padding: 5px;
+
       b {
         text-transform: uppercase;
       }
 
       li {
         font-size: 12px;
+
         a {
           color: #666;
           line-height: 23px;
+
           &:hover {
             text-decoration: underline;
           }
         }
       }
     }
+  }
+
+  &__socials {
+    section {
+      ul {
+        margin-top: 10px;
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+
+        li {
+          font-size: 2rem;
+          color: #666;
+
+          &:hover {
+            color: $blue-color;
+          }
+        }
+      }
+    }
+  }
+
+  &__flex {
+    display: flex;
+    margin-top: 10px;
+  }
+
+  &__newsletter {
+    input {
+      outline: none;
+      border: 1px solid #999;
+      flex: 1;
+      height: 40px;
+      font-size: 14px;
+      padding-left: 10px;
+      margin-right: 8px;
+    }
+
+    button {
+      width: 150px;
+    }
+
+    p {
+      margin-top: 10px;
+      font-size: 12px;
+      color: #666;
+
+      a {
+        color: $blue-color;
+        text-decoration: underline;
+      }
+    }
+
   }
 }
