--- a/components/footer/styles.module.scss
+++ b/components/footer/styles.module.scss
@@ -7,12 +7,34 @@
     display: grid;
     gap: 3rem;
     padding: 1rem;
+    display: grid;
+    grid-template-areas:
+    "payment"
+      "links"
+      "socials"
+      "newsletter"
+      "copyright"
+    ;
+    gap: 3rem;
+    padding: 1rem;
 
+    @media(min-width: 800px) {
+      grid-template-areas: 
+        "links socials"
+        "links newsletter"
+        "copyright payment"
+      ;
+    }
+    @media(min-width: 1200px){
+      max-width: 1200px;
+      margin: 0 auto;
+    }
   }
 
   img {
     width: 140px;
     height: 40px;
+    object-fit: contain;
   }
 
   h3 {
@@ -22,7 +44,7 @@
   }
 
   &__links {
-    // grid-area: links;
+    grid-area: links;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
@@ -50,6 +72,8 @@
   }
 
   &__socials {
+    grid-area: socials;
+
     section {
       ul {
         margin-top: 10px;
@@ -64,6 +88,7 @@
           &:hover {
             color: $blue-color;
           }
+         
         }
       }
     }
@@ -75,6 +100,8 @@
   }
 
   &__newsletter {
+    grid-area: newsletter;
+
     input {
       outline: none;
       border: 1px solid #999;
@@ -100,5 +127,60 @@
       }
     }
 
+  }
+
+  &__paymment {
+    grid-area: paayments;
+  }
+
+  &__flexwrap {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 1rem;
+
+    img {
+      width: 60px;
+      height: 36px;
+      object-fit: cover;
+    }
+  }
+
+  &__copyright {
+    grid-area: copyright;
+
+    section {
+
+      font-size: 12px;
+      color: #666;
+      padding-bottom: 10px;
+    }
+
+    ul {
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      column-gap: 2rem;
+
+      li {
+
+        position: relative;
+        text-decoration: underline;
+        cursor: pointer;
+
+        &::after {
+          content: "";
+          width: 1px;
+          height: 15px;
+          background: #666;
+          position: absolute;
+          right: -1rem;
+        }
+
+        &:last-of-type::after {
+          display: none;
+        }
+      }
+    }
   }
 }
